# BlokusEngine

./: .gitignore  CMakeLists.txt  blokus  board.cpp  board.h  build.sh  main.cpp  makePieces  makePieces.cpp  match.cpp  mninimax.cpp  piece.cpp  piece.h  pieceFactory.h  pieceShapes.cpp  pieceShapes.h  pieces.cpp  readme.md
include/: board.h  gui.h  match.h  minimax.h  piece.h  pieceFactory.h  pieceShapes.h
py/: test.py
src/: board.cpp  gui.cpp  gui.h  main.cpp  makePieces.py  match.cpp  minimax.cpp  minimax.h  mninimax.cpp  piece.cpp  pieceShapes.cpp  pyblokus.cpp
src/blokusboardlib/: CMakeLists.txt  board.cpp  board.h  match.cpp  match.h  piece.cpp  piece.h  pieceShapes.cpp  pieceShapes.h
test/: test.cpp
